fix: scrollbar color in code blocks

--- a/themes/PaperMod/assets/css/includes/scroll-bar.css
+++ b/themes/PaperMod/assets/css/includes/scroll-bar.css
@@ -32,7 +32,7 @@
 
 .post-content :not(table) ::-webkit-scrollbar-thumb {
     border: 2px solid var(--hljs-bg);
-    background: rgb(113, 113, 117);
+    background: var(--tertiary);;
 }
 
 .post-content :not(table) ::-webkit-scrollbar-thumb:hover {
